# vibrant-rs

./: .gitignore  Cargo.toml  renovate.json
.github/workflows/: check.yml
.github/workflows  /: build.yml
src/: lib.rs  palette.rs  quantizer.rs  settings.rs  vibrant.rs
src/quantizer/: median_cut.rs  mod.rs  neu.rs
