[package]
name = "vibrant"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/vibrant-rs.git"
homepage = "https://github.com/killercup/vibrant-rs.git"
license = "MIT"
readme = "README.md"
documentation = "http://killercup.github.io/vibrant-rs/"
description = "Extract vibrant colors from an image file. Can be used as a library, but also contains a simple executable."
edition = "2018"

[features]
default = []
print-truecolor = ["termion"]
dev = ["clippy"]

[dependencies]
image = { version = "0.22.1", default-features = false, features = ["png_codec", "jpeg", "jpeg_rayon"] }
itertools = "0.8.0"
clippy = { version = "0.0.15", optional = true }
hsl = "0.1.1"
priority-queue = "0.6.0"
termion = { version = "1.5.3", optional = true }

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
