[package]
name = "vibrant"
version = "0.1.2"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/vibrant-rs.git"
homepage = "https://github.com/killercup/vibrant-rs.git"
license = "MIT"
readme = "README.md"
documentation = "http://killercup.github.io/vibrant-rs/"
description = "Extract vibrant colors from an image file. Can be used as a library, but also contains a simple executable."
edition = "2018"

[features]
default = []
dev = ["clippy"]

[dependencies]
image = "0.25"
color_quant = ">=1.1.0"
itertools = "0.12.1"
clippy = { version = "0.0.302", optional = true }
hsl = ">=0.1.1"
